# lll-type-erased-storage

./: .travis.yml  CMakeLists.txt  README.md  storage.h
